Fixed whitespace on the right

--- a/css/general.css
+++ b/css/general.css
@@ -20,11 +20,11 @@ ul {
 .container {
     text-align: center;
     padding: .8em 1.2em;
-    width: 100%
 }
 
 .logo {
     width: 80px;
+    margin-left: 10px;
 }
 
 .hide-mobile {
